frontend/test/should_fail/computations_decl_use_returns_type_mismatch_001.grg
using model_init;

function func(b:Node) : B
{
	return(b);
}

